[metadata]
name = tagupy
version = 0.1.0
url = https://github.com/takesei/tagupy
# Do we need `author`?
author = Sei Takeda
author_email = sei06k14@gmail.com
description = DoE supporting tools
long_description = file: README.rst, HISTORY.rst
keywords = tagupy, doe, experiment
license = MIT license
classifiers = 
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.0

[options]
zip_safe = False,
include_package_data = True,
packages = find:
python_requires = >=3.6
install_requires =
    Click>=7.0
    openpyxl
    numpy
    pandas
tests_require = test_requirements

[options.entry_points]
console_scripts = 
    tagupy = tagupy.cli:main

[options.packages.find]
include =
    tagupy
    tagupy.*


[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:tagupy/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
